deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-storage
spec:
  replicas: 2                 # Number of pods
  selector:                    #
    matchLabels:               # This selector MUST MATCH below labels
      app: demo-storage          #

  # Pod template
  template:
    metadata:
      name: demo-storage                
      labels:
        app: demo-storage
    spec:
      containers:                       
        - name: web                     
          image: minhpq331/demo-storage:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: "/tmp/session"
              name: storage-volume
      volumes:
        - name: storage-volume
          emptyDir: {}
          # persistentVolumeClaim:
          #  claimName: deployment-claim
