service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-storage
spec:
  type: ClusterIP        # Chỉ tạo Virtual IP
  selector:
    app: demo-storage    # Label selector
  ports:
    - protocol: TCP      # Protocol
      port: 80           # Port của service
      targetPort: 3000   # Port của pod
